Jitsi integration (#114)
Changelog: feat
