# openapi.yml
@@ -1691,6 +1691,60 @@ paths:
                 - email
                 - password
         required: true
+  /meeting_providers:
+    get:
+      operationId: api_meeting_providers_get_collection
+      tags:
+        - MeetingProvider
+      responses:
+        '200':
+          description: 'MeetingProvider collection'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MeetingProvider-meeting_provider.read'
+            application/ld+json:
+              schema:
+                type: object
+                properties:
+                  member: { type: array, items: { $ref: '#/components/schemas/MeetingProvider.jsonld-meeting_provider.read' } }
+                  totalItems: { type: integer, minimum: 0 }
+                  view: { type: object, properties: { '@id': { type: string, format: iri-reference }, '@type': { type: string }, first: { type: string, format: iri-reference }, last: { type: string, format: iri-reference }, previous: { type: string, format: iri-reference }, next: { type: string, format: iri-reference } }, example: { '@id': string, type: string, first: string, last: string, previous: string, next: string } }
+                  search: { type: object, properties: { '@type': { type: string }, template: { type: string }, variableRepresentation: { type: string }, mapping: { type: array, items: { type: object, properties: { '@type': { type: string }, variable: { type: string }, property: { type: [string, 'null'] }, required: { type: boolean } } } } } }
+                required:
+                  - member
+        '403':
+          description: Forbidden
+          content:
+            application/ld+json:
+              schema:
+                $ref: '#/components/schemas/Error.jsonld'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          links: {  }
+      summary: 'Retrieves the collection of MeetingProvider resources.'
+      description: 'Retrieves the collection of MeetingProvider resources.'
+      parameters:
+        -
+          name: page
+          in: query
+          description: 'The collection page number'
+          required: false
+          deprecated: false
+          allowEmptyValue: true
+          schema:
+            type: integer
+            default: 1
+          style: form
+          explode: false
+          allowReserved: false
+      deprecated: false
   /password/request:
     post:
       operationId: api_passwordrequest_post
@@ -3067,6 +3121,10 @@ components:
           type: string
         host:
           $ref: '#/components/schemas/User-event_type.read'
+        meetingProviders:
+          type: array
+          items:
+            $ref: '#/components/schemas/EventTypeMeetingProvider-event_type.read'
       required:
         - name
         - duration
@@ -3092,6 +3150,10 @@ components:
         slug:
           pattern: '^([a-z0-9-]+)$'
           type: string
+        meetingProviderIdentifiers:
+          type: array
+          items:
+            type: string
     EventType.jsonld-event.read:
       type: object
       description: ''
@@ -3184,6 +3246,10 @@ components:
           type: string
         host:
           $ref: '#/components/schemas/User.jsonld-event_type.read'
+        meetingProviders:
+          type: array
+          items:
+            $ref: '#/components/schemas/EventTypeMeetingProvider.jsonld-event_type.read'
       required:
         - name
         - duration
@@ -3209,6 +3275,61 @@ components:
         slug:
           pattern: '^([a-z0-9-]+)$'
           type: string
+        meetingProviderIdentifiers:
+          type: array
+          items:
+            type: string
+    EventTypeMeetingProvider-event_type.read:
+      type: object
+      description: ''
+      deprecated: false
+      properties:
+        id:
+          readOnly: true
+          type: integer
+        providerIdentifier:
+          type: string
+        enabled:
+          type: boolean
+        eventType:
+          $ref: '#/components/schemas/EventType-event_type.read'
+    EventTypeMeetingProvider.jsonld-event_type.read:
+      type: object
+      description: ''
+      deprecated: false
+      properties:
+        '@context':
+          readOnly: true
+          oneOf:
+            -
+              type: string
+            -
+              type: object
+              properties:
+                '@vocab':
+                  type: string
+                hydra:
+                  type: string
+                  enum: ['http://www.w3.org/ns/hydra/core#']
+              required:
+                - '@vocab'
+                - hydra
+              additionalProperties: true
+        '@id':
+          readOnly: true
+          type: string
+        '@type':
+          readOnly: true
+          type: string
+        id:
+          readOnly: true
+          type: integer
+        providerIdentifier:
+          type: string
+        enabled:
+          type: boolean
+        eventType:
+          $ref: '#/components/schemas/EventType.jsonld-event_type.read'
     Holiday:
       type: object
       description: ''
@@ -3247,6 +3368,34 @@ components:
           type: string
         name:
           type: string
+    MeetingProvider-meeting_provider.read:
+      type: object
+      description: ''
+      deprecated: false
+      properties:
+        identifier:
+          type: string
+        name:
+          type: string
+        available:
+          type: boolean
+    MeetingProvider.jsonld-meeting_provider.read:
+      type: object
+      description: ''
+      deprecated: false
+      properties:
+        '@id':
+          readOnly: true
+          type: string
+        '@type':
+          readOnly: true
+          type: string
+        identifier:
+          type: string
+        name:
+          type: string
+        available:
+          type: boolean
     RequestPassword:
       type: object
       description: ''
@@ -3603,6 +3752,8 @@ tags:
     name: CancelEvent
   -
     name: Holiday
+  -
+    name: MeetingProvider
   -
     name: RequestPassword
   -
